# forward_move

./: CMakeLists.txt  README.md  cpp20_output.txt
docs/: cache_object_lifecycle_analysis.md  index_sequence_deep_dive_guide.md  move_extract_pattern_guide.md  perfect_forwarding_factory_guide.md  perfect_forwarding_task_scheduler_guide.md  sfinae_constraints_guide.md  std_decay_detailed_guide.md  technical_guide.md  移动构造后析构解析.md
examples/: comprehensive_example.cpp  cpp20_advanced.cpp  decay_demo  decay_demo.cpp  decay_problem_demo  decay_problem_demo.cpp  move_semantics.cpp  perfect_forwarding.cpp  rvalue_basics.cpp  template_deduction_test  template_deduction_test.cpp
